<resources>
    <string name="app_name">Raisha Bianca Putri Bagus Pertemuan  4</string>
    <string name="appName">Rock Paper Scissors</string>
    <string name="enter">Enter</string>
    <string name="masukkan_namamu">Masukkan Namamu</string>
    <string name="nama">Nama :</string>
    <string name="greeting_template">Hello, %s. Are You Ready To Play ?</string>
    <string name="start">Start</string>
    <string name="score_s">score : %s</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="scissors">scissors</string>
    <string name="description">description</string>
    <string name="computer_move_s">Computer Move</string>
    <string name="status">Status</string>
    <string name="start_over">Start Over?</string>
    <string name="finish">Finish</string>
</resources>